# VPN-manager

./: .env.example  .gitignore  CLAUDE.md  CLIENT_SEARCH_EXAMPLES.md  CLIENT_SEARCH_IMPLEMENTATION.md  COMPLEX_SEARCH_GUIDE.md  GLOBAL_AUDIT_REPORT.md  ISSUES_AND_OPTIMIZATION.md  MULTI_SELECT_GUIDE.md  MULTI_SELECT_SUMMARY.md  NOTIFICATION_FIX_ANALYSIS.md  PATTERNS_ANALYSIS.md  README.md  README_MIGRATIONS.md  README_NEW_ARCHITECTURE.md  README_SYNC.md  README_TESTS.md  TODO.md  alembic.ini  append_handlers.py  check_syntax.py  compile_app.py  extract_texts.py  instructions.yaml  messages.yaml  migrate_emails.py  pyproject.toml  requirements.txt  reset_database.py  sync_messages.py  update.py
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: .gitkeep  20260324_1700_initial_schema.py  20260324_1800_add_verify_ssl.py  20260325_1710_add_session_cookies.py  20260325_1920_add_custom_server_urls.py  20260325_1930_add_server_paths.py  20260325_1940_update_path_defaults.py  20260325_2000_add_telegram_username.py  20260326_1645_227475f1f48c_add_subscription_templates_support.py  20260326_2000_add_per_connection_limits.py  20260327_1724_65f261c1a3b2_add_notification_logs_table_for_expiry_.py  20260401_1200_add_lower_search_columns.py  (+3 more)
app/: __init__.py  config.py  main.py
content/: android.yaml  faq.yaml  ios.yaml  linux.yaml  windows.yaml
docs/: xui-client-leak-fix.md
plans/: architecture.md
tests/: conftest.py  test_config.py  test_models.py  test_services.py  test_subscription_email_uniqueness.py  test_sync_service.py  test_utils.py
(+74 files in other folders)
